# Dawn

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: tests.yaml
autoload/: dawn.vim
autoload/dawn/: ParseContext.vim  Templates.vim  Utils.vim  Variables.vim  Vim.vim
doc/: Dawn.txt  templates.txt
plugin/: dawn.vim
templates/: CMakeLists.root.txt  CMakeLists.src.txt  README.md
templates/cpp/: CMakeLists.root.txt  CMakeLists.src.txt  CMakeLists.test.txt  CMakeLists.txt  dawn-manifest.json
templates/cpp/src/: CMakeLists.txt
templates/cpp/tests/: CMakeLists.txt
templates/cpp/tests/src/: DeleteMe.cpp
templates/go/: dawn-manifest.json  go.gitignore
templates/mkdocs/: dawn-manifest.json  mkdocs-README.md  mkdocs.yml
templates/mkdocs/docs/: index.md
templates/mkdocs/github/workflows/: publish-docs.yml
templates/vim/: dawn-manifest.json
templates/vim/doc/: template.txt
test/: .themisrc  ArgumentEvalTests.vimspec  TemplateExpansionTests.vimspec
